# medicare-portal

./: .cursorrules  .gitignore  .replit  CLAUDE.md  DB_REFACTOR_OVERVIEW.md  Household Discounts Cheatsheet - HHD Simple.csv  OUTREACH_SETTINGS_IMPLEMENTATION.md  add_protected_route.txt  bun.lockb  compare.txt  diff.txt  example.env  fix_elm.py  hello.py  hhd.numbers  litestream-single-db.yml  main.py  medicare-portal.db  medicare-portal.db-client_wal_index  medicare-portal.db-shm  medicare-portal.db-wal  medsupmds.csv  msg.md  output.txt  package-lock.json  package.json  port-example.js  pyproject.toml  replit.nix  repomix-output.txt  requirements.txt  sensitive-paths.txt  setup_db.py  svgo-config.js  svgo.config.yml  tailwind.config.js  test-contacts.csv  test_billing_endpoints.sh  test_db.py  test_my_subscription.sh  (+3 more)
.claude/: mcp.json
.cursor/: mcp.json
SELECT * FROM sessions LIMIT 5;/: settings.json
backend/: .env.example  .gitignore  BULK-IMPORT-IMPLEMENTATION.md  README-bulk-import.md  SQLITE_LITESTREAM_ARCHITECTURE.md  bun.lockb  litestream-single-db.yml  local.db  medicare-portal.db-info  medicare-portal.db-shm  medicare-portal.db-wal  out.txt  package-lock.json  package.json  repomix-output.txt  temp-1744516416047  temp-1744516416047-shm  temp-1744517593819.db-shm  temp-1744517708035.db-shm  temp-1744517798087.db-shm  temp-1744517978204.db-shm  temp-1744518542592.db-shm  zipData.json
db/: database.py  show_schema.py
docs/: contact-tracking.md  stripe-setup.md
frontend/: .env  bun.lockb  elm-test.html  elm.json  index.html  package.json  vite.config.ts  (+2 more)
(+472 files in other folders)
